--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,221 @@ html{
 ::-webkit-scrollbar-thumb{
     background: var(--navy-blue);
 }
+
+
+
+main{
+    padding: 2rem 5%;
+    background: rgb(208, 207, 207);
+    /* background: rgb(251 246 246); */
+}
+
+
+/* Theme dark/light */
+.change-theme{
+    font-size: 2.5rem;
+    cursor: pointer;
+    color: var(--white-color);
+    transition: all 0.3s;
+}
+
+.change-theme:hover{
+    color: #8e94a8;
+}
+
+
+
+
+
+
+
+.header{
+    width: 100%;
+    height: 100vh;
+    background: url("../img/header-bg.jfif") no-repeat center center/cover;
+    position: relative;
+    padding: 1.3rem 6%;
+}
+
+.header::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.header .header-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding-top: 2rem;
+    z-index: 1;
+}
+
+.header .header-content .logo{
+    background: var(--white-color);
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    text-align: center;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+
+
+.header .header-content .logo a{
+    font-family: 'Lobster', cursive;
+    font-size: 3rem;
+}
+
+.header .header-content .navbar a{
+    color: var(--white-color);
+    font-size: 1.75rem;
+    padding: 1rem 3.5rem;
+}
+
+.header .header-content .navbar a:hover{
+    color: rgb(198, 193, 193);
+}
+
+
+
+
+.header .main-content{
+    text-align: center;
+    position: relative;
+    z-index: 2;
+    color: var(--white-color);
+    top: 20%;
+}
+
+.header .main-content h2{
+    font-size: 9rem;
+    font-weight: 600;
+    line-height: 1.4;
+    margin-bottom: 3rem;
+}
+
+
+.header .main-content p{
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-bottom: 5rem;
+}
+
+.header .main-content .btn{
+    background: var(--white-color);
+    padding: 1.2rem 3.5rem;
+    font-size: 1.7rem;
+    border-radius: 0.5rem;
+    color: var(--navy-blue);
+    font-weight: 600;
+    cursor: pointer;
+    border: transparent;
+}
+
+.header .main-content .btn:hover{
+    background: transparent;
+    border: 0.1rem solid var(--white-color);
+    color: var(--white-color);
+    transition: all 0.3s ease-in-out;
+}
+
+
+/* Main Section starts */
+
+/* Service section */
+.service{
+    text-align: center;
+    padding: 2rem 1rem;
+}
+
+.service .service-title{
+    font-size: 4.4rem;
+    font-weight: 550;
+    line-height: 1.3;
+    color: var(--navy-blue);
+}
+
+.service .service-para{
+    font-size: 1.7rem;
+    font-weight: 450;
+    line-height: 1.3;
+    color: var(--navy-blue);
+    margin-top: 1.7rem;
+}
+
+.service .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    gap: 4rem;
+    padding-top: 8rem;
+    padding-bottom: 5rem;
+}
+
+.service .box-container .box{
+    padding: 5rem 2rem;
+    background: var(--white-color);
+    border-radius: 0.5rem;
+    line-height: 1.5;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    /* box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.4); */
+}
+
+.insurance:hover{
+    box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.4);
+}
+
+.advantage:hover{
+    box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.4);
+}
+
+.commission:hover{
+    box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.4);
+}
+
+
+.service .box-container i{
+    font-size: 5rem;
+    color: var(--navy-blue);
+    cursor: pointer;
+}
+
+/* .service .box-container .fa-house-circle-check{
+    color: var(--house-color);
+}
+
+
+.service .box-container .insurance:hover .fa-piggy-bank{
+    color: var(--piggy-color);
+}
+
+.service .box-container .fa-hand-holding-dollar{
+    color: var(--money-color);
+} */
+
+
+.service .box-container .box h3{
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 1;
+    padding-top: 2rem;
+}
+
+.service .box-container .box p{
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-align: center;
+    padding-top: 3rem;
+}
