--- a/css/style.css
+++ b/css/style.css
@@ -389,3 +389,28 @@ main{
     padding-bottom: 6rem;
     padding-top: 3rem;
 }
+
+
+.box{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0 6rem;
+}
+
+.gallery-box{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
+    gap: 1rem;
+}
+
+.gallery-box img{
+    object-fit: cover;
+    border-radius: 0.5rem;
+}
+
+.gallery-box img:hover{
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.4);
+    cursor: pointer;
+    transform: scale(1.025);
+}
