--- a/css/style.css
+++ b/css/style.css
@@ -503,3 +503,65 @@ main{
     background: transparent;
     border: 1px solid var(--navy-blue);
 }
+
+
+
+/* App Download section */
+.app{
+    padding: 6rem 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.app-title{
+    font-size: 5rem;
+    font-weight: 550;
+    color: var(--navy-blue);
+    line-height: 1.3;
+}
+
+.app-para{
+    font-size: 1.5rem;
+    /* font-weight: 400; */
+    color: rgb(75, 71, 71);
+    margin: 2rem 0;
+}
+
+.app .app-logo{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+
+.app .app-logo .app-link{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    border-radius: 0.5rem;
+    background: var(--navy-blue);
+    color: var(--white-color);
+    min-width: 15rem;
+    padding: 0.5rem;
+    cursor: pointer;
+}
+
+.app .app-logo .app-link:hover{
+    background: #0d1938;   
+}
+
+.app .app-logo .app-link i{
+    font-size: 3.1rem;
+}
+
+.app .app-logo .app-link p{
+    font-size: 1rem;
+}
+
+.app .app-logo .app-link h3{
+    font-size: 1.5rem;
+    font-weight: 400;
+}
