--- a/css/style.css
+++ b/css/style.css
@@ -655,3 +655,114 @@ main{
     font-size: 1.24rem;
     padding-top: 1rem;
 }
+
+
+
+
+/* Subscribe Section */
+.subscribe{
+    margin: 6rem 0;
+}
+
+.subscribe .subscribe-letter-container{
+    padding-top: 3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+.subscribe .subscribe-letter-container .subscribe-text h3{ 
+    font-size: 3.4rem;
+    font-weight: 500;
+    color: #0a1118;
+    padding: 0;
+}
+
+.subscribe .subscribe-letter-container .subscribe-text p{ 
+    font-size: 1.5rem;
+    color: #7a8283;
+    margin-top: 2rem;
+    line-height: 1.5;
+    text-align: left;
+}
+
+
+
+.subscribe-email{
+    width: 50%;
+}
+
+.subscribe-form{
+    text-align: left;
+}
+
+
+
+.subscribe-form .email label span{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.subscribe-form .email strong{
+    color: var(--navy-blue);
+}
+
+.subscribe-form #emailAddress{
+    display: block;
+    width: 80%;
+    border: 0.1rem solid #82888d;
+    border-radius: 0.2rem;
+    padding: 0.5rem;
+    margin-top : 0.5rem;
+    margin-bottom : 2rem;
+}
+
+#emailAddress::placeholder{
+    text-transform: none;
+    font-weight: 500;
+}
+
+
+
+.subscribe .subscribe-email .checkpoint{
+    font-size: 1.3rem;
+    gap: 2;
+    display: flex;
+    align-items: center;
+}
+
+.subscribe .subscribe-email .checkpoint span{
+    color: var(--navy-blue);
+    font-weight: bold;
+    cursor: pointer;
+    padding: 0 0.5rem;
+}
+
+.subscribe .subscribe-email .checkpoint span:hover{
+    color: #000;
+}
+
+.subs-btn{
+    margin: 3.3rem 0;
+}
+
+.subscribe .subscribe-email .btn{
+    background: var(--navy-blue);
+    padding: 1.2rem 3.5rem;
+    font-size: 1.4rem;
+    border-radius: 0.2rem;
+    color: var(--white-color);
+    font-weight: 500;
+    cursor: pointer;
+    border: transparent;
+}
+
+.subscribe .subscribe-email .btn:hover{
+    background: transparent;
+    border: 0.1rem solid var(--navy-blue);
+    color: var(--navy-blue);
+    transition: all 0.3s ease-in-out;
+}
+
+
