--- a/css/style.css
+++ b/css/style.css
@@ -870,3 +870,76 @@ main{
     color: #343f5e;
     font-weight: 600;
 }
+
+
+
+
+/* Made By section */
+.made-by{
+    padding: 4rem 5%;
+    border-top: 1px solid var(--navy-blue);
+    width: 90%;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.made-by .site-details{
+    font-size: 1.3rem;
+    font-weight: 400;
+    color: var(--navy-blue);
+    padding-bottom: 2rem;
+}
+
+.made-by .site-details span{
+    font-weight: 600;
+    cursor: pointer;
+    color: var(--navy-blue);
+}
+
+
+.made-by .site-details span:hover{
+    text-decoration: underline;
+}
+
+.made-by .developer-details{
+    color: var(--navy-blue);
+    font-size: 1.5rem;
+}
+
+.made-by .developer-details i{
+    color: var(--navy-blue);
+    font-size: 2rem;
+    cursor: pointer;
+    padding: 0 0.1rem;
+}
+
+/* .made-by .developer-details i:hover{
+    color: #647ac4;
+    transition: none;
+} */
+
+.made-by .developer-details .red:hover{
+    color: #dc2920;
+    transition: 0.3s;
+}
+
+.made-by .developer-details .coffee:hover{
+    color: #6f4e37;
+    transition: 0.3s;
+}
+
+.made-by .developer-details span a{
+    color: var(--navy-blue);
+    font-weight: 600;
+    font-size: 1.6rem;
+}
+
+
+.made-by .developer-details span a:hover{
+    text-decoration: underline;
+    color: #102568;
+    
+}
